--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
   </head>
-  <body>
+  <!-- m-0 because preflight = false in tailwind.config (needed to work with PrimeVue css) -->
+  <body class="m-0">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
